Stop <th> with sorting and <td> with dates from wrapping

--- a/src/css/minside/_atoms/_table-cells.css
+++ b/src/css/minside/_atoms/_table-cells.css
@@ -18,3 +18,8 @@
 .table__cell--file-upload {
   order: 2;
 }
+
+/* Prevent text-wrap in table cells showing date */
+[data-label="Utgitt"] {
+  white-space: nowrap;
+}
