--- a/src/css/minside/_atoms/_table-sort.css
+++ b/src/css/minside/_atoms/_table-sort.css
@@ -2,6 +2,7 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  white-space: nowrap;
   
   &--asc:after,
   &--desc:after {
